force-icon/main/default/objects/GiftCatalog__c/GiftCatalog__c.object-meta.xml
<CustomObject>
    <description>List of all products that can offered as gift to the clients. Managed by PCR team</description>
    <label>Gift Catalog</label>
    <nameField>
        <label>Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>