force-icon/main/default/objects/GiftCatalog__c/fields/GiftCategory__c.field-meta.xml
<CustomField>
    <fullName>GiftCategory__c</fullName>
    <label>Gift Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capucines</fullName>
            </value>
            <value>
                <fullName>Exotics</fullName>
            </value>
            <value>
                <fullName>High W&amp;J</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Leather Bags</fullName>
            </value>
            <value>
                <fullName>Men Bags</fullName>
            </value>
            <value>
                <fullName>Men RTW</fullName>
            </value>
            <value>
                <fullName>Men Shoes</fullName>
            </value>
            <value>
                <fullName>Nomades/Hardsided</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Watches</fullName>
            </value>
            <value>
                <fullName>Women RTW</fullName>
            </value>
            <value>
                <fullName>Women Shoes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>