force-icon/main/default/objects/GiftCatalog__c/fields/GiftDescription__c.field-meta.xml
<CustomField>
    <fullName>GiftDescription__c</fullName>
    <label>Gift Description</label>
    <type>TextArea</type>
</CustomField>