force-icon/main/default/objects/GiftCatalog__c/fields/GiftImage__c.field-meta.xml
<CustomField>
    <fullName>GiftImage__c</fullName>
    <formula>IMAGE(  GiftImageURL__c  , &quot;Photo unavailable&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Image</label>
    <type>Text</type>
</CustomField>