force-icon/main/default/objects/GiftCatalog__c/fields/GiftImageURL__c.field-meta.xml
<CustomField>
    <fullName>GiftImageURL__c</fullName>
    <description>Url of the product Gift Image</description>
    <label>Gift Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>