force-icon/main/default/objects/GiftCatalog__c/fields/SKUGift__c.field-meta.xml
<CustomField>
    <fullName>SKUGift__c</fullName>
    <description>SKU of the gift</description>
    <externalId>true</externalId>
    <label>SKU Gift</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>