force-icon/main/default/objects/GiftCatalog__c/recordTypes/ProductGifting.recordType-meta.xml
<RecordType>
    <fullName>ProductGifting</fullName>
    <active>true</active>
    <description>Gift with SKU</description>
    <label>Product Gifting</label>
</RecordType>