force-icon/main/default/objects/GiftCatalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SKUGift__c</columns>
    <columns>GiftCategory__c</columns>
    <columns>GiftDescription__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>GiftImage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>